Fixed card, and removed arrow. It was too much color!

--- a/src/components/SuggestionCard/SuggestionCard.css
+++ b/src/components/SuggestionCard/SuggestionCard.css
@@ -46,15 +46,7 @@
 .cardComparisonBefore {
     background: #282C34;
     height: 80px;
-    width: 80px;
-    border-radius: 5px;
-    margin-left: 10px;
-}
-
-.cardComparisonAfter {
-    background: #282C34;
-    height: 80px;
-    width: 80px;
+    width: 200px;
     border-radius: 5px;
     margin-left: 10px;
 }
